Fix YAML indentation in build workflow

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,34 @@
-# 4) Build APK (no icon tree shaking)
+name: Flutter Build APK
+
+on:
+  push:
+    branches: [ main ]
+  workflow_dispatch:
+
+permissions:
+  contents: write
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+      # 1) Checkout project
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      # 2) Install Flutter 3.38.4 (required for Dart 3.6.0)
+      - name: Set up Flutter
+        uses: subosito/flutter-action@v2
+        with:
+          flutter-version: "3.38.4"
+          channel: stable
+
+      # 3) Install pub dependencies
+      - name: Install dependencies
+        run: flutter pub get
+
+      # 4) Build APK (no icon tree shaking)
       - name: Build APK
         run: |
           flutter build apk --release --no-tree-shake-icons --verbose || true
