Add GitHub Actions workflow for Flutter build

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: k53_quicklearn_sa
+name: recipe_explorer
 description: A new Flutter project.
 publish_to: none
 version: 1.0.0+1
@@ -23,6 +23,7 @@ dependencies:
   dio: ^5.4.0
   fluttertoast: ^8.2.4
   fl_chart: ^0.65.0
+  flutter_slidable: ^4.0.3
 
 dev_dependencies:
   flutter_test:    # CRITICAL: Required for Flutter project testing - DO NOT REMOVE
