--- a/.github/workflows/flutter_build.yml
+++ b/.github/workflows/flutter_build.yml
@@ -33,10 +33,8 @@ jobs:
         run: flutter pub get
 
       # Run analyzer & tests
-      - name: Analyze
-        run: flutter analyze
-      - name: Run tests
-        run: flutter test
+      # - name: Run tests
+      #   run: flutter test
 
       # Build APK
       - name: Build APK
